# Navi

./: .gitmodules  CMakeLists.txt  Navi.pro  Navi_en_US.ts  README.md  TODO.rtf  main.cpp  main.qml  mapviewer.pro  oldmain.qml  qml.qrc
forms/: Geocode.qml  GeocodeForm.ui.qml  Locale.qml  LocaleForm.ui.qml  Message.qml  MessageForm.ui.qml  ReverseGeocode.qml  ReverseGeocodeForm.ui.qml  RouteAddress.qml  RouteAddressForm.ui.qml  RouteCoordinate.qml  RouteCoordinateForm.ui.qml  RouteList.qml  RouteListDelegate.qml
map/: CircleItem.qml  ImageItem.qml  MapComponent.qml  MapSliders.qml  MapWindow.qml  PolygonItem.qml  PolylineItem.qml
menus/: ItemPopupMenu.qml  MainMenu.qml  MapPopupMenu.qml  MarkerPopupMenu.qml
resources/: output.nmea.txt  resources.qrc
src/: CMakeLists.txt  main.cpp
src/hotreload/: hotreloadqmlapplicationengine.cpp  hotreloadqmlapplicationengine.h
src/nmealog/: nmealog.cpp  nmealog.h
src/qml/: CMakeLists.txt  HotReloader.qml  main.qml  qml.qrc  qtquickcontrols2.conf
src/qml/animations/: ActivateSearchBarAnimation.qml  CloseMarkerDialogAnimation.qml  DeactivateSearchBarAnimation.qml  OpenMarkerDialogAnimation.qml
src/qml/components/: BackButton.qml  CenterWindow.qml  CloseButton.qml  CustomLabel.qml  GlassPullPane.qml  MapboxPlugin.qml  MapboxSearchModel.qml  Marker.qml  MarkerDialog.qml  PlacesMapView.qml  PullPane.qml  SearchBar.qml  SearchPage.qml  SearchPageImpl.qml  SoftUI
src/qml/map/: CustomLabel.qml  MainMapPage.qml  MainMapStates.qml  MapWindow.qml  Marker.qml  PlaceInfoPage.qml  PlacesMap.qml  PlacesMapView.qml
src/qml/pages/: PlaceInfoPage.qml  SearchPage.qml  SearchPageImpl.qml
src/qml/pages/map/: CHEAPRULER.txt  DirectionsView.qml  DirectionsViewImpl.qml  MainMapPage.qml  MainMapPageStates.qml  MainMapStates.qml  MapPage.qml  MapPageStates.qml  MapStates.qml  PlacesMapView.qml  RouteView.qml
src/qml/resources/: CMakeLists.txt  resources.qrc
src/qml/resources/fonts/Lato/: Lato-Normal.sfd
src/qml/singletons/: AppUtil.qml  EsriPlugin.qml  EsriRouteModel.qml  EsriSearchModel.qml  GPS.qml  GlobalStatus.qml  Logic.qml  MapboxPlugin.qml  MapboxSearchModel.qml  WasmLocationPlugin.qml
